swagger and controller fix