@@ -163,8 +163,7 @@ public class SearchResultConverter {
                 .map(SearchResponse::getAggregations).map(a -> a.<ParsedTerms>get(STORAGE_SIZE_BY_TIER_AGG_NAME))
                 .map(bkts -> bkts.getBucketByKey(tier))
                 .map(bucket -> ImmutablePair.of(
-                        bucket.getDocCount(),
-                        new Double(
+                        bucket.getDocCount(), Double.valueOf(
                                 bucket.getAggregations().<ParsedSum>get(STORAGE_SIZE_AGG_NAME).getValue()
                         ).longValue())
                 ).orElse(ImmutablePair.of(ZERO, ZERO));
